dsplot/Gramar/generated/GraphPlotParser.py
# Generated from GraphPlot.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class GraphPlotParser ( Parser ):

    grammarFileName = "GraphPlot.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'PLOT'", "'SET'", "'='", "'LABEL'", "'STYLE'", 
                     "'SCALE'", "'SUBPLOT'", "'GRID'", "'SELECT'", "'SAVE'", 
                     "'AS'", "'1D'", "'2D'", "'LINE'", "'SCATTER'", "'BAR'", 
                     "'HIST'", "'PIE'", "'BOX'", "'HEATMAP'", "','", "'('", 
                     "')'", "'X'", "'Y'", "'LINEAR'", "'LOG'", "'x'", "'TITLE'", 
                     "'FIGSIZE'", "'THEME'", "'COLOR'", "'LINESTYLE'", "'MARKER'", 
                     "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "LBRACE", "RBRACE", 
                      "IDENTIFIER", "STRING", "NUMBER", "WS" ]

    RULE_parse = 0
    RULE_statement = 1
    RULE_plotStatement = 2
    RULE_configStatement = 3
    RULE_labelStatement = 4
    RULE_styleStatement = 5
    RULE_scaleStatement = 6
    RULE_subplotStatement = 7
    RULE_saveStatement = 8
    RULE_dimension = 9
    RULE_chartType = 10
    RULE_dataSpec = 11
    RULE_plotOptions = 12
    RULE_option = 13
    RULE_value = 14
    RULE_axis = 15
    RULE_scaleType = 16
    RULE_gridSize = 17
    RULE_position = 18
    RULE_labelType = 19
    RULE_configKey = 20
    RULE_configValue = 21
    RULE_styleKey = 22
    RULE_styleValue = 23

    ruleNames =  [ "parse", "statement", "plotStatement", "configStatement", 
                   "labelStatement", "styleStatement", "scaleStatement", 
                   "subplotStatement", "saveStatement", "dimension", "chartType", 
                   "dataSpec", "plotOptions", "option", "value", "axis", 
                   "scaleType", "gridSize", "position", "labelType", "configKey", 
                   "configValue", "styleKey", "styleValue" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    LBRACE=35
    RBRACE=36
    IDENTIFIER=37
    STRING=38
    NUMBER=39
    WS=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ParseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(GraphPlotParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GraphPlotParser.StatementContext)
            else:
                return self.getTypedRuleContext(GraphPlotParser.StatementContext,i)


        def getRuleIndex(self):
            return GraphPlotParser.RULE_parse

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParse" ):
                listener.enterParse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParse" ):
                listener.exitParse(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParse" ):
                return visitor.visitParse(self)
            else:
                return visitor.visitChildren(self)




    def parse(self):

        localctx = GraphPlotParser.ParseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_parse)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 48
                self.statement()
                self.state = 51 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 1270) != 0)):
                    break

            self.state = 53
            self.match(GraphPlotParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def plotStatement(self):
            return self.getTypedRuleContext(GraphPlotParser.PlotStatementContext,0)


        def configStatement(self):
            return self.getTypedRuleContext(GraphPlotParser.ConfigStatementContext,0)


        def labelStatement(self):
            return self.getTypedRuleContext(GraphPlotParser.LabelStatementContext,0)


        def styleStatement(self):
            return self.getTypedRuleContext(GraphPlotParser.StyleStatementContext,0)


        def scaleStatement(self):
            return self.getTypedRuleContext(GraphPlotParser.ScaleStatementContext,0)


        def subplotStatement(self):
            return self.getTypedRuleContext(GraphPlotParser.SubplotStatementContext,0)


        def saveStatement(self):
            return self.getTypedRuleContext(GraphPlotParser.SaveStatementContext,0)


        def getRuleIndex(self):
            return GraphPlotParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = GraphPlotParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 62
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 55
                self.plotStatement()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 56
                self.configStatement()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 3)
                self.state = 57
                self.labelStatement()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 4)
                self.state = 58
                self.styleStatement()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 5)
                self.state = 59
                self.scaleStatement()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 6)
                self.state = 60
                self.subplotStatement()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 7)
                self.state = 61
                self.saveStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PlotStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dimension(self):
            return self.getTypedRuleContext(GraphPlotParser.DimensionContext,0)


        def chartType(self):
            return self.getTypedRuleContext(GraphPlotParser.ChartTypeContext,0)


        def dataSpec(self):
            return self.getTypedRuleContext(GraphPlotParser.DataSpecContext,0)


        def plotOptions(self):
            return self.getTypedRuleContext(GraphPlotParser.PlotOptionsContext,0)


        def getRuleIndex(self):
            return GraphPlotParser.RULE_plotStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPlotStatement" ):
                listener.enterPlotStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPlotStatement" ):
                listener.exitPlotStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPlotStatement" ):
                return visitor.visitPlotStatement(self)
            else:
                return visitor.visitChildren(self)




    def plotStatement(self):

        localctx = GraphPlotParser.PlotStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_plotStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(GraphPlotParser.T__0)
            self.state = 65
            self.dimension()
            self.state = 66
            self.chartType()
            self.state = 67
            self.dataSpec()
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==22:
                self.state = 68
                self.plotOptions()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConfigStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def configKey(self):
            return self.getTypedRuleContext(GraphPlotParser.ConfigKeyContext,0)


        def configValue(self):
            return self.getTypedRuleContext(GraphPlotParser.ConfigValueContext,0)


        def getRuleIndex(self):
            return GraphPlotParser.RULE_configStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConfigStatement" ):
                listener.enterConfigStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConfigStatement" ):
                listener.exitConfigStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConfigStatement" ):
                return visitor.visitConfigStatement(self)
            else:
                return visitor.visitChildren(self)




    def configStatement(self):

        localctx = GraphPlotParser.ConfigStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_configStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(GraphPlotParser.T__1)
            self.state = 72
            self.configKey()
            self.state = 73
            self.match(GraphPlotParser.T__2)
            self.state = 74
            self.configValue()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LabelStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def labelType(self):
            return self.getTypedRuleContext(GraphPlotParser.LabelTypeContext,0)


        def STRING(self):
            return self.getToken(GraphPlotParser.STRING, 0)

        def getRuleIndex(self):
            return GraphPlotParser.RULE_labelStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLabelStatement" ):
                listener.enterLabelStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLabelStatement" ):
                listener.exitLabelStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelStatement" ):
                return visitor.visitLabelStatement(self)
            else:
                return visitor.visitChildren(self)




    def labelStatement(self):

        localctx = GraphPlotParser.LabelStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_labelStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(GraphPlotParser.T__3)
            self.state = 77
            self.labelType()
            self.state = 78
            self.match(GraphPlotParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StyleStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def styleKey(self):
            return self.getTypedRuleContext(GraphPlotParser.StyleKeyContext,0)


        def styleValue(self):
            return self.getTypedRuleContext(GraphPlotParser.StyleValueContext,0)


        def getRuleIndex(self):
            return GraphPlotParser.RULE_styleStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStyleStatement" ):
                listener.enterStyleStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStyleStatement" ):
                listener.exitStyleStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStyleStatement" ):
                return visitor.visitStyleStatement(self)
            else:
                return visitor.visitChildren(self)




    def styleStatement(self):

        localctx = GraphPlotParser.StyleStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_styleStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(GraphPlotParser.T__4)
            self.state = 81
            self.styleKey()
            self.state = 82
            self.match(GraphPlotParser.T__2)
            self.state = 83
            self.styleValue()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ScaleStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def axis(self):
            return self.getTypedRuleContext(GraphPlotParser.AxisContext,0)


        def scaleType(self):
            return self.getTypedRuleContext(GraphPlotParser.ScaleTypeContext,0)


        def getRuleIndex(self):
            return GraphPlotParser.RULE_scaleStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScaleStatement" ):
                listener.enterScaleStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScaleStatement" ):
                listener.exitScaleStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitScaleStatement" ):
                return visitor.visitScaleStatement(self)
            else:
                return visitor.visitChildren(self)




    def scaleStatement(self):

        localctx = GraphPlotParser.ScaleStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_scaleStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(GraphPlotParser.T__5)
            self.state = 86
            self.axis()
            self.state = 87
            self.match(GraphPlotParser.T__2)
            self.state = 88
            self.scaleType()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubplotStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def gridSize(self):
            return self.getTypedRuleContext(GraphPlotParser.GridSizeContext,0)


        def position(self):
            return self.getTypedRuleContext(GraphPlotParser.PositionContext,0)


        def getRuleIndex(self):
            return GraphPlotParser.RULE_subplotStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubplotStatement" ):
                listener.enterSubplotStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubplotStatement" ):
                listener.exitSubplotStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubplotStatement" ):
                return visitor.visitSubplotStatement(self)
            else:
                return visitor.visitChildren(self)




    def subplotStatement(self):

        localctx = GraphPlotParser.SubplotStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_subplotStatement)
        try:
            self.state = 96
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.match(GraphPlotParser.T__6)
                self.state = 91
                self.match(GraphPlotParser.T__7)
                self.state = 92
                self.gridSize()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.match(GraphPlotParser.T__6)
                self.state = 94
                self.match(GraphPlotParser.T__8)
                self.state = 95
                self.position()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SaveStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(GraphPlotParser.STRING, 0)

        def getRuleIndex(self):
            return GraphPlotParser.RULE_saveStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSaveStatement" ):
                listener.enterSaveStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSaveStatement" ):
                listener.exitSaveStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSaveStatement" ):
                return visitor.visitSaveStatement(self)
            else:
                return visitor.visitChildren(self)




    def saveStatement(self):

        localctx = GraphPlotParser.SaveStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_saveStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(GraphPlotParser.T__9)
            self.state = 99
            self.match(GraphPlotParser.T__10)
            self.state = 100
            self.match(GraphPlotParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimensionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GraphPlotParser.RULE_dimension

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDimension" ):
                listener.enterDimension(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDimension" ):
                listener.exitDimension(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDimension" ):
                return visitor.visitDimension(self)
            else:
                return visitor.visitChildren(self)




    def dimension(self):

        localctx = GraphPlotParser.DimensionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_dimension)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            _la = self._input.LA(1)
            if not(_la==12 or _la==13):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ChartTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GraphPlotParser.RULE_chartType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterChartType" ):
                listener.enterChartType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitChartType" ):
                listener.exitChartType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitChartType" ):
                return visitor.visitChartType(self)
            else:
                return visitor.visitChildren(self)




    def chartType(self):

        localctx = GraphPlotParser.ChartTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_chartType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 2080768) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DataSpecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(GraphPlotParser.LBRACE, 0)

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(GraphPlotParser.IDENTIFIER)
            else:
                return self.getToken(GraphPlotParser.IDENTIFIER, i)

        def RBRACE(self):
            return self.getToken(GraphPlotParser.RBRACE, 0)

        def getRuleIndex(self):
            return GraphPlotParser.RULE_dataSpec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDataSpec" ):
                listener.enterDataSpec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDataSpec" ):
                listener.exitDataSpec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDataSpec" ):
                return visitor.visitDataSpec(self)
            else:
                return visitor.visitChildren(self)




    def dataSpec(self):

        localctx = GraphPlotParser.DataSpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_dataSpec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(GraphPlotParser.LBRACE)
            self.state = 107
            self.match(GraphPlotParser.IDENTIFIER)
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==21:
                self.state = 108
                self.match(GraphPlotParser.T__20)
                self.state = 109
                self.match(GraphPlotParser.IDENTIFIER)
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 115
            self.match(GraphPlotParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PlotOptionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def option(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GraphPlotParser.OptionContext)
            else:
                return self.getTypedRuleContext(GraphPlotParser.OptionContext,i)


        def getRuleIndex(self):
            return GraphPlotParser.RULE_plotOptions

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPlotOptions" ):
                listener.enterPlotOptions(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPlotOptions" ):
                listener.exitPlotOptions(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPlotOptions" ):
                return visitor.visitPlotOptions(self)
            else:
                return visitor.visitChildren(self)




    def plotOptions(self):

        localctx = GraphPlotParser.PlotOptionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_plotOptions)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(GraphPlotParser.T__21)
            self.state = 118
            self.option()
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==21:
                self.state = 119
                self.match(GraphPlotParser.T__20)
                self.state = 120
                self.option()
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 126
            self.match(GraphPlotParser.T__22)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OptionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(GraphPlotParser.IDENTIFIER, 0)

        def value(self):
            return self.getTypedRuleContext(GraphPlotParser.ValueContext,0)


        def getRuleIndex(self):
            return GraphPlotParser.RULE_option

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOption" ):
                listener.enterOption(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOption" ):
                listener.exitOption(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOption" ):
                return visitor.visitOption(self)
            else:
                return visitor.visitChildren(self)




    def option(self):

        localctx = GraphPlotParser.OptionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_option)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(GraphPlotParser.IDENTIFIER)
            self.state = 129
            self.match(GraphPlotParser.T__2)
            self.state = 130
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(GraphPlotParser.NUMBER, 0)

        def STRING(self):
            return self.getToken(GraphPlotParser.STRING, 0)

        def IDENTIFIER(self):
            return self.getToken(GraphPlotParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return GraphPlotParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)




    def value(self):

        localctx = GraphPlotParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_value)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 962072674304) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AxisContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GraphPlotParser.RULE_axis

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAxis" ):
                listener.enterAxis(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAxis" ):
                listener.exitAxis(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAxis" ):
                return visitor.visitAxis(self)
            else:
                return visitor.visitChildren(self)




    def axis(self):

        localctx = GraphPlotParser.AxisContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_axis)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            _la = self._input.LA(1)
            if not(_la==24 or _la==25):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ScaleTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GraphPlotParser.RULE_scaleType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScaleType" ):
                listener.enterScaleType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScaleType" ):
                listener.exitScaleType(self)
